bk_ida/gccida/c2/x86_order_regs_for_local_alloc
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13047:12: error: expected expression
*( _OWORD *)&reg_alloc_order[v3] = xmm*(short *)0x67A650; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13047:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reg_alloc_order[v3] = xmm*(short *)0x67A650; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13047:36: error: use of undeclared identifier 'xmm'
*( _OWORD *)&reg_alloc_order[v3] = xmm*(short *)0x67A650; 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13049:12: error: expected expression
*( _OWORD *)&reg_alloc_order[v12 + 4] = xmm*(short *)0x67A660; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13049:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reg_alloc_order[v12 + 4] = xmm*(short *)0x67A660; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13049:41: error: use of undeclared identifier 'xmm'
*( _OWORD *)&reg_alloc_order[v12 + 4] = xmm*(short *)0x67A660; 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13051:12: error: expected expression
*( _OWORD *)&reg_alloc_order[v3] = xmm*(short *)0x67A670; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13051:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reg_alloc_order[v3] = xmm*(short *)0x67A670; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13051:36: error: use of undeclared identifier 'xmm'
*( _OWORD *)&reg_alloc_order[v3] = xmm*(short *)0x67A670; 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13052:12: error: expected expression
*( _OWORD *)&reg_alloc_order[v3 + 4] = xmm*(short *)0x67A680; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13052:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reg_alloc_order[v3 + 4] = xmm*(short *)0x67A680; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13052:40: error: use of undeclared identifier 'xmm'
*( _OWORD *)&reg_alloc_order[v3 + 4] = xmm*(short *)0x67A680; 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13055:12: error: expected expression
*( _OWORD *)&reg_alloc_order[v14] = xmm*(short *)0x67A690; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13055:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reg_alloc_order[v14] = xmm*(short *)0x67A690; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13055:37: error: use of undeclared identifier 'xmm'
*( _OWORD *)&reg_alloc_order[v14] = xmm*(short *)0x67A690; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13056:12: error: expected expression
*( _OWORD *)&reg_alloc_order[v14 + 4] = xmm*(short *)0x67A6A0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13056:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reg_alloc_order[v14 + 4] = xmm*(short *)0x67A6A0; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13056:41: error: use of undeclared identifier 'xmm'
*( _OWORD *)&reg_alloc_order[v14 + 4] = xmm*(short *)0x67A6A0; 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/i386.c:13059:12: error: expected expression
*( _OWORD *)&reg_alloc_order[v13] = xmm*(short *)0x67A650; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/x86_order_regs_for_local_alloc/src/obj/i386.o] Error 1
